<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_half">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/spacing_2x"
      android:paddingEnd="@dimen/spacing_1x"
      android:paddingStart="@dimen/spacing_1x"
      android:paddingTop="@dimen/spacing_2x">

      <Switch
        android:id="@+id/lockscreenUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/label_lockscreen"
        android:textColor="@color/textColorPrimary"
        android:textOff="@string/label_not_use"
        android:textOn="@string/label_use"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_half">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingBottom="@dimen/spacing_2x"
      android:paddingEnd="@dimen/spacing_1x"
      android:paddingStart="@dimen/spacing_1x"
      android:paddingTop="@dimen/spacing_2x">

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_change_edition"
          android:textColor="@color/textColorPrimary"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="vertical">

        <Button
          android:id="@+id/selectEdition"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end|center_vertical"
          android:text="@string/label_edition"/>
      </LinearLayout>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_half">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingBottom="@dimen/spacing_2x"
      android:paddingEnd="@dimen/spacing_1x"
      android:paddingStart="@dimen/spacing_1x"
      android:paddingTop="@dimen/spacing_2x">

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_change_fontsize"
          android:textColor="@color/textColorPrimary"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="vertical">

        <Button
          android:id="@+id/selectFont"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end|center_vertical"
          android:text="@string/label_font"/>
      </LinearLayout>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

</LinearLayout>
