<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingBottom="@dimen/spacing_10x"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/upward"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_margin="@dimen/spacing_1x"
    android:src="@drawable/ic_arrow_upward_black_24dp"
    android:tint="@color/grey"
    app:backgroundTint="@color/white_trans80"
    app:elevation="0dp"
    app:fabSize="mini"
    app:pressedTranslationZ="0dp"
    app:rippleColor="@color/colorAccent"
    app:useCompatPadding="true"/>

  <LinearLayout
    android:id="@+id/menus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/optionsMenu"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="15dp"
    android:gravity="end"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_1x"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/cancelCheckedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_1x"
        android:background="@drawable/options_label_bg"
        android:paddingBottom="@dimen/spacing_quarter"
        android:paddingEnd="@dimen/spacing_2x"
        android:paddingStart="@dimen/spacing_2x"
        android:paddingTop="@dimen/spacing_quarter"
        android:text="@string/label_cancel_checked"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/white"/>

      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_black_24dp"
        app:backgroundTint="@color/grey_light"
        app:elevation="0dp"
        app:fabSize="mini"
        app:pressedTranslationZ="0dp"
        app:rippleColor="@color/colorAccent"
        app:useCompatPadding="true"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_1x"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/copyCheckedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_1x"
        android:background="@drawable/options_label_bg"
        android:paddingBottom="@dimen/spacing_quarter"
        android:paddingEnd="@dimen/spacing_2x"
        android:paddingStart="@dimen/spacing_2x"
        android:paddingTop="@dimen/spacing_quarter"
        android:text="@string/label_copy_checked"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/white"/>

      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/copyChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_content_copy_black_24dp"
        app:backgroundTint="@color/grey_light"
        app:elevation="0dp"
        app:fabSize="mini"
        app:pressedTranslationZ="0dp"
        app:rippleColor="@color/colorAccent"
        app:useCompatPadding="true"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_1x"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/shareCheckedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_1x"
        android:background="@drawable/options_label_bg"
        android:paddingBottom="@dimen/spacing_quarter"
        android:paddingEnd="@dimen/spacing_2x"
        android:paddingStart="@dimen/spacing_2x"
        android:paddingTop="@dimen/spacing_quarter"
        android:text="@string/label_share_checked"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/white"/>

      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_black_24dp"
        app:backgroundTint="@color/grey_light"
        app:elevation="0dp"
        app:fabSize="mini"
        app:pressedTranslationZ="0dp"
        app:rippleColor="@color/colorAccent"
        app:useCompatPadding="true"/>

    </LinearLayout>

  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/optionsMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="@dimen/spacing_1x"
    android:layout_marginBottom="@dimen/spacing_2x"
    android:src="@drawable/ic_add_black_24dp"
    android:tint="@android:color/white"
    app:elevation="0dp"
    app:pressedTranslationZ="0dp"
    app:useCompatPadding="true"/>

</RelativeLayout>
